# NeatNet

./: .clangd  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  build.sh  genome.cpp  genome.h  pi.cmake
docker/: dev_create.sh  dev_into.sh  dev_start.sh  docker_adduser.sh  dockerfile
include/: cpplinq.hpp  genalg.h  genes.h  genome.h  innovation.h  netvisualize.h  params.h  phenotype.h  serialize.h  species.h  utils.h
misc/: params.json
src/: genalg.cpp  genes.cpp  genome.cpp  innovation.cpp  netvisualize.cpp  params.cpp  phenotype.cpp  serialize.cpp  species.cpp
test/: CMakeLists.txt  test_genalg.cpp  test_genome.cpp  test_innovation.cpp  test_params.cpp  test_params.json  test_serialize.cpp  test_visualize.cpp  test_xor.cpp  xor_params.json
